Update structure pom in Security, Image and catpoint-parent, update configure of maven-surefile-plugin