@@ -21,12 +21,6 @@
 		<maven.compiler.target>17</maven.compiler.target>
 		<mockito.core.version>4.8.1</mockito.core.version>
 		<mockito.junit.jupiter>4.8.1</mockito.junit.jupiter>
-		<software.amazon.awssdk.region.version>2.19.8</software.amazon.awssdk.region.version>
-		<software.amazon.awssdk.core.version>2.19.8</software.amazon.awssdk.core.version>
-		<software.amazon.awssdk.auth.version>2.19.8</software.amazon.awssdk.auth.version>
-		<software.amazon.awssdk.rekognition.version>2.19.8</software.amazon.awssdk.rekognition.version>
-		<software.amazon.awssdk.aws.core.version>2.19.8</software.amazon.awssdk.aws.core.version>
-		<software.amazon.awssdk.utils.version>2.19.8</software.amazon.awssdk.utils.version>
 	</properties>
 	
 	<dependencies>
@@ -42,44 +36,6 @@
 			<artifactId>mockito-junit-jupiter</artifactId>
 			<version>${mockito.junit.jupiter}</version>
 			<scope>test</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/regions -->
-		<dependency>
-    		<groupId>software.amazon.awssdk</groupId>
-    		<artifactId>regions</artifactId>
-    		<version>${software.amazon.awssdk.region.version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/core -->
-		<dependency>
-			<groupId>software.amazon.awssdk</groupId>
-			<artifactId>core</artifactId>
-			<version>${software.amazon.awssdk.core.version}</version>
-			<type>pom</type>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/auth -->
-		<dependency>
-			<groupId>software.amazon.awssdk</groupId>
-			<artifactId>auth</artifactId>
-			<version>${software.amazon.awssdk.auth.version}</version>
-			<type>pom</type>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/rekognition -->
-		<dependency>
-			<groupId>software.amazon.awssdk</groupId>
-			<artifactId>rekognition</artifactId>
-			<version>${software.amazon.awssdk.rekognition.version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/aws-core -->
-		<dependency>
-			<groupId>software.amazon.awssdk</groupId>
-			<artifactId>aws-core</artifactId>
-			<version>${software.amazon.awssdk.aws.core.version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/utils -->
-		<dependency>
-			<groupId>software.amazon.awssdk</groupId>
-			<artifactId>utils</artifactId>
-			<version>${software.amazon.awssdk.utils.version}</version>
 		</dependency>
 	</dependencies>	
 
@@ -103,13 +59,12 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId> 
-					<dependencies> 
-						<dependency> 
-							<groupId>org.ow2.asm</groupId> 
-							<artifactId>asm</artifactId>
-							<version>9.1</version>
-						</dependency> 
-					</dependencies>
+					<version>3.0.0-M7</version>
+       				<configuration>
+            			<argLine>
+             				--add-opens com.udacity.catpoint.security/com.udacity.catpoint.security.service=ALL-UNNAMED
+            			</argLine>
+          			</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
